--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,82 +1,122 @@
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    }
-    
-    body {
-    font-family: cursive;
-    }
-    
-    a {
-    text-decoration: none;
-    }
-    li {
-    list-style: none;
-    }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
 
 .navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-    background-color: teal;
-    color: #fff;
-    }
-    
-    .nav-links a {
-    color: #fff;
-    }
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: teal;
+  color: #fff;
+  opacity: 50;
+}
+
+.nav-links a {
+  color: #fff;
+}
+
+.logo {
+  font-size: 32px;
+}
+
+.menu {
+  display: flex;
+  font-size: 25px;
+}
+
+.menu li:hover {
+  background-color: #4c9e9e;
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+
+.menu li {
+  padding: 5px 14px;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: teal;
+  color: white;
+  text-align: center;
+}
+
+
+.bottomNav {
+  background-color: teal;
+  overflow: hidden;
+  display: inline;
+}
+
+.bottomNav a {
+  float: right;
+  color: #ffffff;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+
+.bottomNav a:hover {
+  background-color: #4c9e9e;
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+
+.container {
+  position: absolute;
+  transform: translate(-50%,-50%);
+  top: 35%;
+  left: 50%;
+}
+
+.titleH2{
+  font-weight: 500;
+  color: #000;
+  opacity: 0.9;
+  font-size: 19px;
+  margin-top: 0;
+  margin-bottom: 60px;
+  text-align: center;
+}
+input {
+  background: transparent;
+  width: 200px;
+  padding: 1em;
+  margin-bottom: 2em;
+  border: none;
+  border-left: 1px solid white;
+  border-top: 1px solid white;
+  border-radius: 5000px;
+  backdrop-filter: blur(5px);
+  box-shadow: 4px 4px 60px rgba(0,0,0,0.2);
+  color: #fff;
+  font-family: Montserrat, sans-serif;
+  font-weight: 500;
+  transition: all 0.2s ease-in-out;
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+}
+
+
   
-    .logo {
-    font-size: 32px;
-    }
-    
-    .menu {
-    display: flex;
-    font-size: 25px;
-    }
-    
-    .menu li:hover {
-    background-color: #4c9e9e;
-    border-radius: 5px;
-    transition: 0.3s ease;
-    }
-    
-    .menu li {
-    padding: 5px 14px;
-    }
-
-    .footer {
-        position: fixed;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        background-color: teal;
-        color: white;
-        text-align: center;
-      }
-
-    
-  .bottomNav{
-        background-color: teal;
-        overflow: hidden;
-        display: inline;
-   }
-
-   .bottomNav a {
-    float: right;
-    color: #ffffff;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-
-
-  .bottomNav a:hover  {
-    background-color: #4c9e9e;
-    border-radius: 5px;
-    transition: 0.3s ease;
-    }
+  
