--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -256,10 +256,86 @@ li {
 
 }
 
-#Administration div {
-  margin :50px;
-  border-radius: 10px ;
-  border-color: #000000;
+
+.text-center2{
+	color:rgb(0, 0, 0);	
+	text-transform:capitalize;
+    font-size: 20px;
+    display: block;
+    text-align: center;
+    margin-top: 37%;
 }
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: teal;
+  float: left;
+  width: auto;
+  font-size: medium;
+  margin: 10px;
+  display: block;
   
+}
+
+.flex-container div {
+  background-color: white;
+  width: auto;
+  margin: 50px;
+  text-align: center;
+  line-height: 20px;
+  font-size: 20px;
+  display: block;
+
+}  
+
+
   
+/*styling the table*/
+.text-center4{
+	color:black;	
+	text-transform:capitalize;
+    font-size:30px;
+    margin: -50px 0 80px 0;
+    display: block;
+    text-align: center;
+    margin-top: 14px;
+    margin-bottom: 20px;;
+} 
+
+.customers {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  margin-bottom: 50px;;
+}
+
+.customers td, .customers th {
+  border: 1px solid #ddd;
+  padding: 8px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  width: 100%;
+
+}
+.customers tr{
+background-color:rgba(0, 128, 128, 0.204);
+opacity: .9;
+color: black;
+
+}
+
+.customers tr:hover 
+{background-color:white;
+  opacity: 0.9;
+}
+
+.customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color:teal;
+  opacity: 0.9;
+  color: black;
+}
+
+
